react/projects/todo_toolkit/src/components/todoList/styles.module.css
.noteList {
  border: 1px solid #35393c;
  border-radius: 12px;
  width: 100%;
  max-width: 800px;
  padding: 50px;
  background-color: #35393c;
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 12px;
  max-height: 500px;
  overflow-y: auto;
}

